# logcraft-cli-plugins

./: .gitignore  Cargo.toml  README.md  licenserc.toml
.github/workflows/: release.yml  test.yml
samples/: .gitignore  README.md
samples/python/: Makefile  README.md  pyproject.toml
samples/python/myplugin/: Makefile  main.py
samples/python/myplugin/client/: pool_loop.py  req.py
samples/python/myplugin/helpers/: schemas.py
samples/python/myplugin/helpers/client/: __init__.py  pool_loop.py  req.py
samples/python/myplugin/package/: settings.k
samples/python/wit/: world.wit
sentinel/: Cargo.toml  README.md
sentinel/package/: rule.k  settings.k
sentinel/src/: lib.rs
splunk/: Cargo.toml  README.md
splunk/package/: rule.k  settings.k
splunk/src/: lib.rs
splunk/wit/: world.wit
